# fishers_exact

./: Cargo.toml  README.md  build.rs
docs/: search-index.js
docs/fishers_exact/: TestTails.t.html  enum.TestTails.html  fishers_exact.v.html  fn.fishers_exact.html  index.html  sidebar-items.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/marker/: trait.Copy.js
docs/src/fishers_exact/: lib.rs.html
src/: lib.rs
src/R/: fexact.c
